	  files):  Add support for a generic Windows EABI toolchain (2013-6-13).

6.29 2013-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* arch/arm/src/sam34/chip/sam4l_pinmap.h: Change naming of some pin
	  configurations to match names used with other SAM part (2013-6-15).
	* arch/arm/src/sam34/sam4l_clockconfig.c: Corrected some typos
	  (2013-6-15).
	* configs/sam4l-xplained/src/sam_buttons.c: Eliminate a warning
	  (2013-6-15).
	* configs/sam4l-xplained/src/sam_mmcsd.c, sam_nsh.c, sam_spi.c,
	  sam3u-ek.h, Kconfig, Makefile, sam4l-xplained.h,
	  configs/sam4l-xplained/README.txt, and
	  configs/sam4l-xplained/include/board.h:  Add support for the SPI-
	  based SD card on the I/O1 module (2013-6-15).
	* arch/arm/src/sam34/sam_spi.c:  Re-architect the SAM3/4 SPI driver
	  so that is it compatible with the SPI drivers of other MCUs
	  (2013-6-16).
	* configs/sam3u-ek/src/up_touchscreen.c and configs/sam4l-xplained/src/sam_mmcsd.c:
	  Changed needed because of the above change the the SAM3/4 SPI
	  interface (2013-6-16).
	* drivers/input/ads7843e.c:  Remove the wait for the touchscreen busy
	  bit.  I don't see the busy bit changing on the SAM3U-EK board.  But
	  maybe it is not supposed to.  From my reading of the ADS7843 spec, it
	  would not be appropriate to wait for the BUSY bit to de-asserted
	  anyway (since it is only de-asserted when we read the data)
	  (2013-6-16).
	* configs/sam3u-ek/src/up_touchscreen.c: Fix polarity of the /PENIRQ
	  signal (it is active low) (2013-6-16).
	* configs/sam3u-ek/include/board.h:  The SAM3U-EK board now runs at
	  96MHz.  This might have broken some things? (2013-6-17).
	* drivers/mmcsd/mmcsd-spi.c:  Driver need to make sure that the SPI mode
	  and data width are correct (2013-6-17).
	* arch/arm/src/kinetis/kinetis_tsi.h:  Corrections to the Kinetis
	  (2013-6-18)
	* arch/arm/src/sam34/sam_spi.c:  Fix SPI mode setting.  In the SAM3/4
	  family, the clock phase control (CPHA) is inverted (NPHA) (2013-6-18).
